// Version
syntax = "proto3";

// Package name
option go_package = "github.com/nanthaphol2/bigdobshop-micro";

// Structures
message ProfileProfile {
    string id = 1;
    string email = 2;
    string username = 3;
    int32 roleCode = 4;
    string created_at = 5;
    string updated_at = 6;
}

message CredentialSearchReq {
    string email = 1;
    string password = 2;
}

message FindOneProfileProfileToRefreshReq {
    string profileId = 1;
}

message GetProfileSavingAccountReq {
    string profileId = 1;
}

message GetProfileSavingAccountRes {
    string profileId = 1;
    double balance = 2;
}

// Methods
service ProfileGrpcService {
    rpc CredentialSearch(CredentialSearchReq) returns (ProfileProfile);
    rpc FindOneProfileProfileToRefresh (FindOneProfileProfileToRefreshReq) returns (ProfileProfile);
    rpc GetProfileSavingAccount (GetProfileSavingAccountReq) returns (GetProfileSavingAccountRes);
}